# scmrepo

./: .coveragerc  .cruft.json  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.cfg.rej
.github/workflows/: release.yaml  tests.yaml  update-template.yaml
scmrepo/: base.py  fs.py  progress.py  utils.py
scmrepo/git/: __init__.py  objects.py  stash.py
scmrepo/git/backend/: base.py  gitpython.py  pygit2.py
scmrepo/git/backend/dulwich/: __init__.py  asyncssh_vendor.py
src/scmrepo/: asyn.py  base.py  exceptions.py  fs.py  noscm.py  progress.py  urls.py  utils.py
src/scmrepo/git/: __init__.py  config.py  credentials.py  objects.py  stash.py
src/scmrepo/git/backend/: base.py  gitpython.py  pygit2.py
src/scmrepo/git/backend/dulwich/: __init__.py  asyncssh_vendor.py  client.py  credentials.py  credentials.py.passing
src/scmrepo/git/backend/pygit2/: __init__.py  callbacks.py  filter.py
src/scmrepo/git/lfs/: __init__.py  client.py  exceptions.py  fetch.py  object.py  pointer.py  progress.py  smudge.py  storage.py
tests/: conftest.py  docker-compose.yml  test_credentials.py  test_dulwich.py  test_fs.py  test_git.py  test_lfs.py  test_noscm.py  test_pygit2.py  test_scmrepo.py  test_stash.py  test_urls.py
tests/git-init/: git.sh
