[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "scmrepo"
description = "scmrepo"
readme = "README.rst"
license = {text = "Apache-2.0"}
authors = [{ name = "Iterative", email = "support@dvc.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "gitpython>3",
    "dulwich>=0.21.6",
    "pygit2>=1.13.3",
    "pygtrie>=2.3.2",
    "fsspec>=2021.7.0",
    "pathspec>=0.9.0",
    "asyncssh>=2.13.1,<3",
    "funcy>=1.14",
    "shortuuid>=0.5.0",
    "dvc-objects>=1.0.1,<3",
    "dvc-http>=2.29.0",
]

[project.urls]
Issues = "https://github.com/iterative/scmrepo/issues"
Source = "https://github.com/iterative/scmrepo"

[project.optional-dependencies]
tests = [
    "pytest==7.2.0",
    "pytest-sugar==0.9.5",
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "mypy==0.971",
    "pytest-test-utils==0.0.8",
    "pytest-asyncio==0.18.3",
    # https://github.com/docker/docker-py/issues/2902
    "pytest-docker==0.12.0; python_version < '3.10' and implementation_name != 'pypy'",
    "mock==5.1.0",
    "paramiko==3.3.1",
    "types-certifi==2021.10.8.3",
    "types-mock==5.1.0.2",
    "types-paramiko==3.3.0.0",
]
dev = [
    "scmrepo[tests]",
]

[tool.setuptools.package-data]
dvc_objects = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "skip_git_backend: skip tests for given backend",
    "slow: mark test as slow to run",
]

[tool.coverage.run]
branch = true
source = ["scmrepo", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "pygtrie",
    "dvc_http.*",
    "funcy",
    "git",
    "gitdb.*",
    "fsspec.*",
    "pathspec.patterns",
    "asyncssh.*",
    "pygit2.*",
    "pytest_docker.plugin",
    "urllib3.*",
]
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = "cachable, keypair"
