[metadata]
description = SCM wrapper and fsspec filesystem for Git for use in DVC
name = scmrepo
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/scmrepo
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    gitpython>3
    dulwich>=0.20.46
    pygit2>=1.10.0
    pygtrie>=2.3.2
    fsspec>=2021.7.0
    pathspec>=0.9.0
    asyncssh>=2.7.1,<3
    funcy>=1.14

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    mypy==0.971
    pytest-test-utils==0.0.8
    pytest-asyncio==0.18.3
    # https://github.com/docker/docker-py/issues/2902
    pytest-docker==0.12.0; python_version < '3.10' or sys_platform != 'win32'
    mock==4.0.3
    paramiko==2.12.0
    types-certifi==2021.10.8.3
    types-mock==5.0.0.0
    types-paramiko==2.12.0.1
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[options.package_data]
dvc_objects = py.typed

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
